# trading-app

./: .gitignore  pyproject.toml
config/: config.yaml.example
config/strategies/: example_strategy.yaml  rsi_ha_strategy.yaml.example
scripts/: compare_backtest_results.py  test_bitget_connection.py  test_bitget_order.py  validate_dry_run_pipeline.py
src/backtest/: data_downloader.py  metrics.py  replay_engine.py  trade_simulator.py
src/capital/: base.py  factory.py  fixed_percent.py  martingale.py  registry.py
src/cli/: backtest.py  main.py  status.py  trade.py
src/core/: app.py  backup.py  config.py  event_bus.py  exceptions.py  lock.py  logging.py  state_machine.py  state_manager.py
src/exchange/: base.py  ccxt_connector.py  order_validator.py  rate_limiter.py
src/indicators/: __init__.py  base.py  heikin_ashi.py  registry.py  rsi.py
src/models/: __init__.py  config.py  events.py  exchange.py  state.py  trade.py
src/notifications/: __init__.py  notification_service.py
src/strategies/: __init__.py  base.py  example_strategy.py  registry.py  rsi_ha_strategy.py
src/trading/: __init__.py  mock_executor.py  trade_executor.py  trade_logger.py
tests/: conftest.py  test_project_structure.py
tests/backtest/: test_data_downloader.py  test_metrics.py  test_replay_engine.py  test_trade_simulator.py  test_trade_simulator_martingale.py
tests/capital/: test_factory.py  test_fixed_percent.py  test_martingale.py
tests/cli/: test_backtest_cli.py  test_main.py  test_status_cmd.py  test_trade.py
tests/core/: test_app.py  test_app_error_notifications.py  (+9 more)
(+21 files in other folders)
